fixed little layout problem in index

--- a/css/index_medium_style.css
+++ b/css/index_medium_style.css
@@ -31,3 +31,31 @@
     background-color: #FFCC00;
     text-align: center;
 }
+
+#news{
+    margin-right: 3%;
+    float: right;
+    width: 29%;
+    border: dotted;
+}
+
+#news li{
+    margin-left: 12%;
+}
+
+#content{
+    width: 63%;
+    float: left;
+}
+
+h2{
+    margin-top: 3%;
+    margin-left: 3%;
+    margin-bottom: 2%;
+}
+
+p{
+    margin-right: 33%;
+    margin-left: 3%;
+    line-height: 130%;
+}
